# cline-example-project05

./: .env.example  .gitignore  CHANGELOG.md  IMPROVEMENT_PLAN.md  POSTMAN_COLLECTION.json  README.md  SECURITY.md  docker-compose.yml  dummy-preview.html  initial.md  start.sh
.github/workflows/: cd-production.yml  cd-staging.yml  ci-backend.yml  ci-frontend.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 2ee0423e9a9e_initial_migration_with_enhanced_models.py
backend/app/: config.py  database.py  logging_config.py  main.py  models.py  schemas.py
backend/app/auth/: auth.py
backend/app/middleware/: __init__.py  error_handler.py  request_id.py
backend/app/routers/: approvals.py  auth.py  export.py  firewalls.py  stats.py
backend/app/services/: approval_service.py  audit_service.py  firewall_service.py
backend/app/tasks/: base.py  notifications.py
backend/scripts/: seed_data.py
backend/tests/: conftest.py  test_approvals.py  test_auth.py  test_export.py  test_rules.py  test_stats.py
backend/tests/fixtures/: data.py
frontend/: Dockerfile  angular.json  nginx.conf  package.json  tsconfig.json
kubernetes/: deployment.yaml  ingress.yaml  service.yaml  values.yaml
prompts/: SESSION_01_SECURITY_HARDENING.md  SESSION_02_BACKEND_API_ENHANCEMENT.md  SESSION_03_DATABASE_MIGRATIONS.md  SESSION_04_FRONTEND_ENHANCEMENT.md  SESSION_05_TESTING_QA.md  SESSION_06_CICD_INFRASTRUCTURE.md  SESSION_07_DOCUMENTATION_POLISH.md  plan_optimization_prompt.txt
(+46 files in other folders)
