[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fw-portal-backend"
version = "1.0.0"
description = "Azure Firewall Manager Portal Backend"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "httpx>=0.23",
    "aiosqlite>=0.18",
    "coverage>=7.0",
]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "httpx>=0.23",
    "aiosqlite>=0.18",
    "coverage>=7.0",
]